# nfe205-pw-image

./: .env-example  .gitignore  README.md  pyproject.toml
app/: eval_perf.py  index_db.py  search.py
config/: settings.py
libs/: cli_utils.py  database.py  descriptor.py  ground_truth.py  index_writer.py
